core/codegen/tests/ui-fail-stable/from_param.stderr
error: named structs are not supported
 --> tests/ui-fail-stable/from_param.rs:4:1
  |
4 | struct Foo1 {
  | ^^^^^^

error: [note] error occurred while deriving `FromParam`
 --> tests/ui-fail-stable/from_param.rs:3:10
  |
3 | #[derive(FromParam)]
  |          ^^^^^^^^^
  |
  = note: this error originates in the derive macro `FromParam` (in Nightly builds, run with -Z macro-backtrace for more info)

error: named structs are not supported
 --> tests/ui-fail-stable/from_param.rs:9:1
  |
9 | struct Foo2 {}
  | ^^^^^^

error: [note] error occurred while deriving `FromParam`
 --> tests/ui-fail-stable/from_param.rs:8:10
  |
8 | #[derive(FromParam)]
  |          ^^^^^^^^^
  |
  = note: this error originates in the derive macro `FromParam` (in Nightly builds, run with -Z macro-backtrace for more info)

error: Only empty enums are accepted
  --> tests/ui-fail-stable/from_param.rs:13:6
   |
13 |     A(String),
   |      ^^^^^^^^

error: [note] error occurred while deriving `FromParam`
  --> tests/ui-fail-stable/from_param.rs:11:10
   |
11 | #[derive(FromParam)]
   |          ^^^^^^^^^
   |
   = note: this error originates in the derive macro `FromParam` (in Nightly builds, run with -Z macro-backtrace for more info)

error: tuple structs are not supported
  --> tests/ui-fail-stable/from_param.rs:21:1
   |
21 | struct Foo5(usize);
   | ^^^^^^

error: [note] error occurred while deriving `FromParam`
  --> tests/ui-fail-stable/from_param.rs:20:10
   |
20 | #[derive(FromParam)]
   |          ^^^^^^^^^
   |
   = note: this error originates in the derive macro `FromParam` (in Nightly builds, run with -Z macro-backtrace for more info)
